--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
 
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+
 
 }
